--- a/{{ cookiecutter.appname }}/src/{{ cookiecutter.appname }}/templates/{{ cookiecutter.appname }}/base.html
+++ b/{{ cookiecutter.appname }}/src/{{ cookiecutter.appname }}/templates/{{ cookiecutter.appname }}/base.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="{% static '{% endraw %}{{ cookiecutter.appname }}{% raw %}/main.css' %}">
     {% if title %}
-    <title>{% endraw %}{{ cookiecutter.appname }}{% raw %} - {{ title }}</title>
+    <title>{% endraw %}{{ cookiecutter.appname_stylized }}{% raw %} - {{ title }}</title>
     {% else %}
-    <title>{% endraw %}{{ cookiecutter.appname }}{% raw %}</title>
+    <title>{% endraw %}{{ cookiecutter.appname_stylized }}{% raw %}</title>
     {% endif %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   </head>
