--- a/{{ cookiecutter.appname }}/src/{{ cookiecutter.appname }}/templates/{{ cookiecutter.appname }}/{{ cookiecutter.appname }}_about.html
+++ b/{{ cookiecutter.appname }}/src/{{ cookiecutter.appname }}/templates/{{ cookiecutter.appname }}/{{ cookiecutter.appname }}_about.html
@@ -1,6 +1,6 @@
 {% raw %}{% extends "{% endraw %}{{ cookiecutter.appname }}{% raw %}/base.html" %}
 
 {% block content %}
-        <h1>{% endraw %}{{ cookiecutter.appname }}{% raw %} About</h1>
+        <h1>{% endraw %}{{ cookiecutter.appname_stylized }}{% raw %} About</h1>
 {% endblock content %}
 {% endraw %}
